new data version(s)